src/toggl_api.h

    TOGGL_EXPORT void toggl_get_countries(
        void *context);
    TOGGL_EXPORT void toggl_get_countries_async(
        void *context);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_default_project_name(
        void *context);
    TOGGL_EXPORT uint64_t toggl_get_default_project_id(
        void *context);
    TOGGL_EXPORT uint64_t toggl_get_default_task_id(
        void *context);
    TOGGL_EXPORT uint64_t toggl_get_default_or_first_workspace_id(
        void *context);
    TOGGL_EXPORT bool_t toggl_set_update_channel(
        void *context,
        const char_t *update_channel);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_update_channel(
        void *context);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_user_fullname(
        void *context);
    TOGGL_EXPORT uint8_t toggl_get_user_beginning_of_week(
        void *context);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_user_email(
        void *context);
    // Redmine base URL (urls::BaseURL()). You must free() the result.
    TOGGL_EXPORT char_t *toggl_get_base_url(
        void *context);
    TOGGL_EXPORT void toggl_sync(
        void *context);
    TOGGL_EXPORT void toggl_fullsync(
        void *context);
    TOGGL_EXPORT bool_t toggl_timeline_toggle_recording(
        void *context,
        const bool_t record_timeline);
    TOGGL_EXPORT bool_t toggl_timeline_is_recording_enabled(
        void *context);
    TOGGL_EXPORT char_t *toggl_time_of_day_format(
        void *context);
    TOGGL_EXPORT void toggl_set_sleep(
        void *context);
    TOGGL_EXPORT void toggl_set_wake(
        void *context);
    TOGGL_EXPORT void toggl_set_locked(
        void *context);
    TOGGL_EXPORT void toggl_set_unlocked(
        void *context);
    TOGGL_EXPORT void toggl_os_shutdown(
        void *context);
    // Notify lib that client is online again.
    TOGGL_EXPORT void toggl_set_online(
        void *context);
    TOGGL_EXPORT void toggl_set_idle_seconds(
        void *context,
        const uint64_t idle_seconds);
    TOGGL_EXPORT bool_t toggl_set_promotion_response(
        void *context,
        const int64_t promotion_type,
        const int64_t promotion_response);
    // Shared helpers

    // You must free() the result
    TOGGL_EXPORT char_t *toggl_format_tracking_time_duration(
        const int64_t duration_in_seconds);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_format_tracked_time_duration(
        const int64_t duration_in_seconds);