app/lib/src/native/toggl_api_generated.dart


  late final _toggl_get_countriesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_countries',
      );
  late final _toggl_get_countries = _toggl_get_countriesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_get_countries_async(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_countries_async(context);
  }

  late final _toggl_get_countries_asyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_countries_async',
      );
  late final _toggl_get_countries_async = _toggl_get_countries_asyncPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_default_project_name(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _toggl_get_default_project_name(context);
  }

  late final _toggl_get_default_project_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_default_project_name');
  late final _toggl_get_default_project_name =
      _toggl_get_default_project_namePtr
          .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int toggl_get_default_project_id(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_default_project_id(context);
  }

  late final _toggl_get_default_project_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_default_project_id',
      );
  late final _toggl_get_default_project_id = _toggl_get_default_project_idPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int toggl_get_default_task_id(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_default_task_id(context);
  }

  late final _toggl_get_default_task_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_default_task_id',
      );
  late final _toggl_get_default_task_id = _toggl_get_default_task_idPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int toggl_get_default_or_first_workspace_id(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_default_or_first_workspace_id(context);
  }

  late final _toggl_get_default_or_first_workspace_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_default_or_first_workspace_id',
      );
  late final _toggl_get_default_or_first_workspace_id =
      _toggl_get_default_or_first_workspace_idPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int toggl_set_update_channel(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> update_channel,
  ) {
    return _toggl_set_update_channel(context, update_channel);
  }

  late final _toggl_set_update_channelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_update_channel');
  late final _toggl_set_update_channel = _toggl_set_update_channelPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_update_channel(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _toggl_get_update_channel(context);
  }

  late final _toggl_get_update_channelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_update_channel');
  late final _toggl_get_update_channel = _toggl_get_update_channelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_user_fullname(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_user_fullname(context);
  }

  late final _toggl_get_user_fullnamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_user_fullname');
  late final _toggl_get_user_fullname = _toggl_get_user_fullnamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int toggl_get_user_beginning_of_week(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_user_beginning_of_week(context);
  }

  late final _toggl_get_user_beginning_of_weekPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_user_beginning_of_week',
      );
  late final _toggl_get_user_beginning_of_week =
      _toggl_get_user_beginning_of_weekPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_user_email(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_user_email(context);
  }

  late final _toggl_get_user_emailPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_user_email');
  late final _toggl_get_user_email = _toggl_get_user_emailPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  /// Redmine base URL (urls::BaseURL()). You must free() the result.
  ffi.Pointer<ffi.Char> toggl_get_base_url(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_base_url(context);
  }

  late final _toggl_get_base_urlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_base_url');
  late final _toggl_get_base_url = _toggl_get_base_urlPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void toggl_sync(ffi.Pointer<ffi.Void> context) {
    return _toggl_sync(context);
  }

  late final _toggl_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_sync',
      );
  late final _toggl_sync = _toggl_syncPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_fullsync(ffi.Pointer<ffi.Void> context) {
    return _toggl_fullsync(context);
  }

  late final _toggl_fullsyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_fullsync',
      );
  late final _toggl_fullsync = _toggl_fullsyncPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int toggl_timeline_toggle_recording(
    ffi.Pointer<ffi.Void> context,
    int record_timeline,
  ) {
    return _toggl_timeline_toggle_recording(context, record_timeline);
  }

  late final _toggl_timeline_toggle_recordingPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_timeline_toggle_recording');
  late final _toggl_timeline_toggle_recording =
      _toggl_timeline_toggle_recordingPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_timeline_is_recording_enabled(ffi.Pointer<ffi.Void> context) {
    return _toggl_timeline_is_recording_enabled(context);
  }

  late final _toggl_timeline_is_recording_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_timeline_is_recording_enabled',
      );
  late final _toggl_timeline_is_recording_enabled =
      _toggl_timeline_is_recording_enabledPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> toggl_time_of_day_format(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _toggl_time_of_day_format(context);
  }

  late final _toggl_time_of_day_formatPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_time_of_day_format');
  late final _toggl_time_of_day_format = _toggl_time_of_day_formatPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_sleep(ffi.Pointer<ffi.Void> context) {
    return _toggl_set_sleep(context);
  }

  late final _toggl_set_sleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_set_sleep',
      );
  late final _toggl_set_sleep = _toggl_set_sleepPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_wake(ffi.Pointer<ffi.Void> context) {
    return _toggl_set_wake(context);
  }

  late final _toggl_set_wakePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_set_wake',
      );
  late final _toggl_set_wake = _toggl_set_wakePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_locked(ffi.Pointer<ffi.Void> context) {
    return _toggl_set_locked(context);
  }

  late final _toggl_set_lockedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_set_locked',
      );
  late final _toggl_set_locked = _toggl_set_lockedPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_unlocked(ffi.Pointer<ffi.Void> context) {
    return _toggl_set_unlocked(context);
  }

  late final _toggl_set_unlockedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_set_unlocked',
      );
  late final _toggl_set_unlocked = _toggl_set_unlockedPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_os_shutdown(ffi.Pointer<ffi.Void> context) {
    return _toggl_os_shutdown(context);
  }

  late final _toggl_os_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_os_shutdown',
      );
  late final _toggl_os_shutdown = _toggl_os_shutdownPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Notify lib that client is online again.
  void toggl_set_online(ffi.Pointer<ffi.Void> context) {
    return _toggl_set_online(context);
  }

  late final _toggl_set_onlinePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_set_online',
      );
  late final _toggl_set_online = _toggl_set_onlinePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_idle_seconds(ffi.Pointer<ffi.Void> context, int idle_seconds) {
    return _toggl_set_idle_seconds(context, idle_seconds);
  }

  late final _toggl_set_idle_secondsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_idle_seconds');
  late final _toggl_set_idle_seconds = _toggl_set_idle_secondsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_promotion_response(
    ffi.Pointer<ffi.Void> context,
    int promotion_type,
    int promotion_response,
  ) {
    return _toggl_set_promotion_response(
      context,
      promotion_type,
      promotion_response,
    );
  }

  late final _toggl_set_promotion_responsePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int64, ffi.Int64)
        >
      >('toggl_set_promotion_response');
  late final _toggl_set_promotion_response = _toggl_set_promotion_responsePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_format_tracking_time_duration(
    int duration_in_seconds,
  ) {
    return _toggl_format_tracking_time_duration(duration_in_seconds);
  }

  late final _toggl_format_tracking_time_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'toggl_format_tracking_time_duration',
      );
  late final _toggl_format_tracking_time_duration =
      _toggl_format_tracking_time_durationPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_format_tracked_time_duration(
    int duration_in_seconds,
  ) {
    return _toggl_format_tracked_time_duration(duration_in_seconds);
  }
